--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,49 @@
+.head{
+    width: 100%;
+    background-color: #0f0f11;
+}
+
+#headShot{
+    width: 40%;
+}
+
+.subBtn{
+    background-color: #14223d;
+    color: #ffffff;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+#mainCont{
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 100%;
+}
+
+.links{
+    color: #ffffff;
+}
+
+.linkPic{
+    border-style: solid;
+    border-color: #0f0f11;
+    border-width: 3px;
+}
+
 header{
     width: 100%;
-    margin-bottom: 50px;
-    background-color: #ffffff;
 }
 
 .foot{
     background-color: #666666;
     border-style: solid;
     border-width: 8px 0px 0px 0px;
-    border-color: #4aaaa5;
+    border-color: #14223d;
     position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
+    height: 60px;
 }
 
 img{
@@ -26,13 +58,6 @@ h2{
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: #777777;
     margin: 10px;
-}
-
-h1{
-    background-color: #4aaaa5;
-    color: #ffffff;
-    padding: 30px 10px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 p{
@@ -55,8 +80,9 @@ a {
 
 body{
     margin: 0px;
-    background-image: url("../images/herringbone.png");
+    background-image: url("../images/dark-honeycomb.png");
     background-color: #d6d6d6;
+    width: 100%;
 }
 
 .thumbnail {
@@ -65,8 +91,47 @@ body{
 
 .caption {
     position: absolute;
-    top: 55%;
-    left: 20px;
+    bottom: 23px;
+    left: 23px;
     width: 200px;
-    background-color: #4aaaa5;
+    background-color: #14223d;
+}
+
+.navBarBtn{
+    background-color: #ffffff;
+    color: #777777;
+    font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+#mainCard{
+    margin: 0px;
+    width: 100%;
+}
+
+#nameHead{
+    background-color: #14223d;
+    color: #ffffff;
+    padding: 30px 10px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+@media only screen and (max-width: 600px) {
+    #headShot{
+        width: 60%;
+        margin-left: 0px;
+    }
+
+    p{
+        font-size: 13px;
+    }
+
+    .content{
+        margin-bottom: 100px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .content{
+        margin-top: 100px;
+    }
 }
